--- a/src/app/pages/inbox-page/inbox-page.page.html
+++ b/src/app/pages/inbox-page/inbox-page.page.html
@@ -6,4 +6,27 @@
 
 <ion-content padding>
 
+
+  <ion-list lines="full">
+    <ion-item>
+      <ion-avatar slot="start">
+        <img src="" alt="Avtar">
+      </ion-avatar>
+      <ion-label>
+        <h2>John Doe</h2>
+        <p>This is test message...</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar slot="start">
+        <img src="" alt="Avtar">
+      </ion-avatar>
+      <ion-label>
+        <h2>Anna Doe</h2>
+        <p>This is test message...</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
