--- a/src/app/pages/inbox-page/inbox-page.page.html
+++ b/src/app/pages/inbox-page/inbox-page.page.html
@@ -8,25 +8,25 @@
 
 
   <ion-list lines="full">
-    <ion-item>
+    <ion-item *ngFor="let message of messageList">
       <ion-avatar slot="start">
-        <img src="" alt="Avtar">
+        <img [src]="" alt="Avtar">
       </ion-avatar>
       <ion-label>
-        <h2>John Doe</h2>
-        <p>This is test message...</p>
+        <h2>{{message.user.firstName}} {{message.user.lastName}}</h2>
+        <p>{{message.lastMessage}}</p>
       </ion-label>
     </ion-item>
 
-    <ion-item>
+    <!-- <ion-item>
       <ion-avatar slot="start">
-        <img src="" alt="Avtar">
+        <img [src]="meaage.user.avatar" alt="Avtar">
       </ion-avatar>
       <ion-label>
         <h2>Anna Doe</h2>
         <p>This is test message...</p>
       </ion-label>
-    </ion-item>
+    </ion-item> -->
   </ion-list>
 
 </ion-content>
