adding components and refactoring

--- a/src/app/pages/register-page/register-page.page.html
+++ b/src/app/pages/register-page/register-page.page.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-    <ion-card>
+    <!-- <ion-card>
         <ion-card-content>
           <ion-item>
             <ion-label position="floating">Email Address</ion-label>
@@ -23,5 +23,9 @@
         <ion-row>
           <ion-button (click)="register()">Register</ion-button>
         </ion-row>
-      </ion-card>
+      </ion-card> -->
+
+      
+  <app-register-form></app-register-form>
+
 </ion-content>
