--- a/src/app/pages/login-page/login-page.page.html
+++ b/src/app/pages/login-page/login-page.page.html
@@ -8,7 +8,9 @@
 
   <img src="assets/icon/favicon.png" alt="logo">
 
-  <ion-card>
+  <app-login-form></app-login-form>
+
+  <!-- <ion-card>
     <ion-card-content>
       <ion-item>
         <ion-label position="floating">Email Address</ion-label>
@@ -19,12 +21,12 @@
         <ion-input type="password"></ion-input>
       </ion-item>
     </ion-card-content>
-    <ion-row>
+    <ion-row class="login-form__buttons">
       <div>
       <ion-button routerLink="/register-page" color="secondary">Register</ion-button>
       <ion-button routerLink="/tabs-page">Login</ion-button>
       </div>
     </ion-row>
-  </ion-card>
+  </ion-card> -->
 
 </ion-content>
