error when login

--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -2,11 +2,11 @@
   <ion-card-content>
     <ion-item>
       <ion-label position="floating">Email Address</ion-label>
-      <ion-input [(ngModel)]="email" type="email"></ion-input>
+      <ion-input [(ngModel)]="this.account.email" type="email"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input [(ngModel)]="password" type="password"></ion-input>
+      <ion-input [(ngModel)]="this.account.password" type="password"></ion-input>
     </ion-item>
   </ion-card-content>
   <ion-row class="register-form__buttons">
