--- a/src/app/pages/login-page/login-page.page.html
+++ b/src/app/pages/login-page/login-page.page.html
@@ -8,7 +8,7 @@
 
   <img src="assets/icon/favicon.png" alt="logo">
 
-  <app-login-form></app-login-form>
+  <app-login-form (loginStatus)="login($event)"></app-login-form>
 
   <!-- <ion-card>
     <ion-card-content>
